implement #505